# Growler

./: .dockerignore  .gitignore  Dockerfile  design_brief.md  pyproject.toml
.github/workflows/: build-lambdas.yml  ci.yml
src/growler/: __init__.py  client.py  errors.py  http.py  manifest.py  metadata_handler.py  null_projection.py  pointer.py  record_handler.py  storage.py  types.py  validation.py  write_handler.py
src/growler/federation/: __init__.py  constraints.py  metadata_lambda.py  record_lambda.py  serde.py  wire.py
src/growler/lambdas/: metadata_entry.py  record_entry.py  write_entry.py
tests/: conftest.py  test_http_and_client.py  test_manifest.py  test_metadata_handler.py  test_null_projection.py  test_pointer.py  test_record_handler.py  test_storage.py  test_types.py  test_validation.py  test_write_handler.py
tests/federation/: fixtures.py  test_constraints.py  test_metadata_lambda.py  test_record_lambda.py  test_serde.py
